# customer-churn-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/: executive_summary.html  feature_importance.csv  model_leaderboard.csv  model_metrics.json  model_summary.md  portfolio_kpis.json  retention_playbook.md  segment_risk.csv
data/: incident_log.csv  operations_kpis.csv
data/processed/: customer_risk_scores.csv
data/raw/: customer_churn_synthetic.csv  sample_metrics.csv  scoring_input_sample.csv
docs/: ai-review-notes.md  architecture.md  dashboard-design.md  operating_model.md
notebooks/: 01_exploration.ipynb
powerbi/: README.md  dashboard.pbix  dashboard_preview.html  dataset.metadata.json  dataset.pbix  measures.dax  preview_summary.json  report.metadata.json  semantic_model.json
scripts/: prepare_dataset.py
src/: analysis.py  churn_pipeline.py
src/customer_churn_analytics/: __init__.py  cli.py  config.py  data_generation.py  inference.py  pipeline.py
tests/: test_batch_scoring.py  test_pipeline_smoke.py
