[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-churn-analytics"
version = "0.1.0"
description = "Production-friendly churn analytics pipeline with synthetic enterprise-scale sample data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.scripts]
customer-churn-analytics = "customer_churn_analytics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
